kubernetes/apps/network/envoy-gateway/config/external-root/gateway.yaml

---
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-root
  labels:
    type: external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname external.${SECRET_DOMAIN}
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 10.0.20.248,::ffff:10.0.20.248
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: external-root-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '${SECRET_DOMAIN}'
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '${SECRET_DOMAIN}'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN/./-}-production-tls
